--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,9 @@
   display: flex;
   justify-content: space-evenly;
 }
+.color {
+  color: #06d6a0;
+  padding: 0.1rem;
+  font-size: 16px;
+  margin: auto 10px;
+}
