--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -44,9 +46,43 @@
   display: flex;
   justify-content: space-evenly;
 }
+
 .color {
   color: #06d6a0;
   padding: 0.1rem;
   font-size: 16px;
   margin: auto 10px;
+}
+
+.login-title {
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  color: #390099;
+  margin: 2rem 0 0 0;
+}
+
+.login-title h1 {
+  background-color: white;
+  border-radius: 3rem;
+  padding: 0 1rem;
+  font-family: 'Dancing Script', cursive;
+}
+
+.sign-in {
+  padding: 0.6rem 1rem;
+  border-radius: 15px;
+  background: #489fb5;
+  color: #240046;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.5s;
+}
+
+.sign-in:hover {
+  background: #240046;
+  color: #489fb5;
 }
