--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   background-image: url(https://picsum.photos/1600/900);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
   min-height: calc(100vh - 48px);
 }
 
